<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

  <data>

    <import type="android.view.View"/>

    <variable
        name="viewModel"
        type="com.hardik.mvvmapp.fragment.gift.viewmodel.GiftFragmentViewModel"
        />

  </data>

  <!--<androidx.core.widget.NestedScrollView-->
  <!--android:layout_width="match_parent"-->
  <!--android:layout_height="match_parent">-->

  <!--</androidx.core.widget.NestedScrollView>-->

  <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_155sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_give_reward_logo"
        />

    <TextView
        android:id="@+id/txtMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/kreon_regular"
        android:gravity="center"
        android:text="@string/str_side_menu_2"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/kreon_regular"
        android:gravity="center"
        android:text="@string/str_give_hint"
        android:textColor="@color/monsoon"
        android:textSize="@dimen/_11sdp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center|start"
        android:hint="@string/str_friend_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/edtPassword"
        style="@style/editText"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:background="@drawable/btn_shadow_red_selected"
        android:fontFamily="@font/kreon_bold"
        android:onClick="@{() -> viewModel.onSendClick()}"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        />

  </LinearLayout>

</layout>