...
  <string name="str_register_hint_5">Terms of Service</string>
  <string name="str_already_account">Already have an account?</string>
  <string name="str_login_here">Login Here</string>

  <!-- Side Menu -->
  <string name="str_title_home">Home</string>
  <string name="str_title_give_confirmation">Be A Local Love-vah</string>
  <string name="str_side_menu_home">Home</string>
  <string name="str_side_menu_1">Menu 1</string>
  <string name="str_side_menu_2">Menu 2</string>
  <string name="str_side_menu_3">Menu 3</string>
  <string name="str_side_menu_4">Menu 4</string>
  <string name="str_side_menu_5">Menu 5</string>
...
  <string name="str_new_password">New Password</string>
  <string name="str_new_password_again">New Password Again</string>

  <!-- Login/Register Validation -->
  <string name="str_error_empty_first_name">Please enter valid first name</string>
  <string name="str_error_empty_last_name">Please enter valid last name</string>
  <string name="str_error_invalid_email_message">Please enter valid email address</string>
  <string name="str_error_empty_address">Please enter valid address</string>
  <string name="str_error_empty_address_1">Please enter valid address 1</string>
  <string name="str_error_empty_city">Please enter valid city name</string>
  <string name="str_error_empty_zip">Please enter valid zip code</string>
  <string name="str_error_empty_dob">Please enter valid date of birth</string>
  <string name="str_error_empty_password_message">Please enter valid password</string>
...
