...

              <TextView
                  android:id="@+id/txtUserName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
...
                  android:textColor="@color/profile_user_name"
                  android:textSize="@dimen/_22sdp"
                  tools:text="@string/user_name"
                  />

...

                <TextView
                    android:id="@+id/txtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtUserAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtUserAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtUserCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtUserZip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtUserDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/btnUpdate"
                  android:layout_width="0dp"
                  android:layout_height="@dimen/_32sdp"
...
                  android:onClick='@{() -> viewModel.updateInfoClick()}'
                  android:padding="@dimen/_5sdp"
                  android:text="@string/str_update_info"
                  android:textAllCaps="false"
                  android:textColor="@color/colorWhite"
...

              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/btnChangePassword"
                  android:layout_width="0dp"
                  android:layout_height="@dimen/_32sdp"
...
                  android:onClick='@{() -> viewModel.changePasswordClick()}'
                  android:padding="@dimen/_5sdp"
                  android:text="@string/str_change_password"
                  android:textAllCaps="false"
                  android:textColor="@color/colorWhite"
...

            <TextView
                android:id="@+id/txtContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:onClick='@{() -> viewModel.contactUs()}'
                android:padding="@dimen/_5sdp"
                android:text="@string/str_contact_us"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
...

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:onClick='@{() -> viewModel.openTermsWebView()}'
                android:padding="@dimen/_5sdp"
                android:text="@string/str_terms"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
...

            <TextView
                android:id="@+id/txtFAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:onClick='@{() -> viewModel.openFaqWebView()}'
                android:padding="@dimen/_5sdp"
                android:text="@string/str_faq"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
...
